syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.example.user";
import "google/protobuf/timestamp.proto";
import "common/common.proto";

message UserSearchRequest{
  int64 id = 1;
}

message UserResponse{
  int64 id = 1;
  string firstName = 2;
  string lastName = 3;
  google.protobuf.Timestamp birthDate = 5;
  common.Genre genre = 4;
}

message UserGenreUpdateRequest{
  int64 id = 1;
  common.Genre genre = 2;
}

service UserService {
  rpc getUserGenre(UserSearchRequest) returns (UserResponse);
  rpc updateUserGenre(UserGenreUpdateRequest) returns (UserResponse);
}